fixed issue with grid spacing in editor

--- a/src/components/editor/previewBar/previewBar.scss
+++ b/src/components/editor/previewBar/previewBar.scss
@@ -4,8 +4,7 @@
 /* HeaderEditor Component */
 
   .editor_previewBar {
-    width: 100%;
+    width: auto;
     height: 60px;
-    margin: 30px auto;
-    padding: 15px 28px;
+    margin: 30px auto 100px auto;
   }
